@@ -1,21 +1,22 @@
-/**
+/*
  * Copyright 2022 Markus Bordihn
  *
- * <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software
- * and associated documentation files (the "Software"), to deal in the Software without restriction,
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
+ * associated documentation files (the "Software"), to deal in the Software without restriction,
  * including without limitation the rights to use, copy, modify, merge, publish, distribute,
  * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
  *
- * <p>The above copyright notice and this permission notice shall be included in all copies or
+ * The above copyright notice and this permission notice shall be included in all copies or
  * substantial portions of the Software.
  *
- * <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
- * BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
+ * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
+
 package de.markusbordihn.adaptiveperformancetweaksspawn.config.spawn;
 
 import de.markusbordihn.adaptiveperformancetweakscore.CoreConstants;
@@ -38,7 +39,7 @@ public final class MekanismAdditionsSpawnConfig {
 
   public static final ForgeConfigSpec commonSpec;
   public static final Config COMMON;
-  protected static final Logger log = LogManager.getLogger(Constants.LOG_NAME);
+  private static final Logger log = LogManager.getLogger(Constants.LOG_NAME);
 
   static {
     com.electronwill.nightconfig.core.Config.setInsertionOrderPreserved(true);
@@ -67,69 +68,60 @@ public final class MekanismAdditionsSpawnConfig {
 
   public static class Config {
 
-    public final ForgeConfigSpec.BooleanValue mekanismAdditionsEnabled;
-    public final ForgeConfigSpec.ConfigValue<String> mekanismAdditionsId;
+    public final ForgeConfigSpec.BooleanValue enabled;
+    public final ForgeConfigSpec.ConfigValue<String> id;
 
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxPassiveMobsPerPlayer;
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxPassiveMobsPerWorld;
-    public final ForgeConfigSpec.ConfigValue<List<String>> mekanismAdditionsPassiveMobsList;
+    public final ForgeConfigSpec.IntValue passiveMobsPerPlayer;
+    public final ForgeConfigSpec.IntValue passiveMobsPerWorld;
+    public final ForgeConfigSpec.IntValue passiveMobsPerServer;
+    public final ForgeConfigSpec.ConfigValue<List<String>> passiveMobsList;
 
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxNeutralMobsPerPlayer;
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxNeutralMobsPerWorld;
-    public final ForgeConfigSpec.ConfigValue<List<String>> mekanismAdditionsNeutralMobsList;
+    public final ForgeConfigSpec.IntValue neutralMobsPerPlayer;
+    public final ForgeConfigSpec.IntValue neutralMobsPerWorld;
+    public final ForgeConfigSpec.IntValue neutralMobsPerServer;
+    public final ForgeConfigSpec.ConfigValue<List<String>> neutralMobsList;
 
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxHostileMobsPerPlayer;
-    public final ForgeConfigSpec.IntValue mekanismAdditionsMaxHostileMobsPerWorld;
-    public final ForgeConfigSpec.ConfigValue<List<String>> mekanismAdditionsHostileMobsList;
+    public final ForgeConfigSpec.IntValue hostileMobsPerPlayer;
+    public final ForgeConfigSpec.IntValue hostileMobsPerWorld;
+    public final ForgeConfigSpec.IntValue hostileMobsPerServer;
+    public final ForgeConfigSpec.ConfigValue<List<String>> hostileMobsList;
 
     Config(ForgeConfigSpec.Builder builder) {
       builder.comment(Constants.MOD_NAME);
 
       builder.push("Mekanism Spawn Config");
-      mekanismAdditionsEnabled = builder.define("mekanismAdditionsEnabled", true);
-      mekanismAdditionsId =
-          builder.define("mekanismAdditionsId", CoreConstants.MEKANISMADDITIONS_MOD);
+      enabled = builder.define("Enabled", true);
+      id = builder.define("Id", CoreConstants.MEKANISMADDITIONS_MOD);
 
-      mekanismAdditionsMaxPassiveMobsPerPlayer =
-          builder.defineInRange("mekanismAdditionsMaxPassiveMobsPerPlayer", 3, 1, 64);
-      mekanismAdditionsMaxPassiveMobsPerWorld =
-          builder.defineInRange("mekanismAdditionsMaxPassiveMobsPerWorld", 12, 1, 512);
-      mekanismAdditionsPassiveMobsList =
+      passiveMobsPerPlayer = builder.defineInRange("MaxPassiveMobsPerPlayer", 4, 1, 64);
+      passiveMobsPerWorld = builder.defineInRange("MaxPassiveMobsPerWorld", 12, 1, 512);
+      passiveMobsPerServer = builder.defineInRange("MaxPassiveMobsPerServer", 320, 1, 1024);
+      // @formatter:off
+      // @formatter:on
+      passiveMobsList =
           builder
               .comment(Constants.CONFIG_LIST_PASSIVE_MOBS)
-              .define(
-                  "mekanismAdditionsPassiveMobsList",
-                  new ArrayList<String>(
-                      Arrays.asList(
-                          // @formatter:off
-                          // @formatter:on
-                          )));
+              .define("PassiveMobsList", new ArrayList<>(List.of()));
 
-      mekanismAdditionsMaxNeutralMobsPerPlayer =
-          builder.defineInRange("mekanismAdditionsMaxNeutralMobsPerPlayer", 4, 1, 64);
-      mekanismAdditionsMaxNeutralMobsPerWorld =
-          builder.defineInRange("mekanismAdditionsMaxNeutralMobsPerWorld", 16, 1, 512);
-      mekanismAdditionsNeutralMobsList =
+      neutralMobsPerPlayer = builder.defineInRange("MaxNeutralMobsPerPlayer", 4, 1, 64);
+      neutralMobsPerWorld = builder.defineInRange("MaxNeutralMobsPerWorld", 16, 1, 512);
+      neutralMobsPerServer = builder.defineInRange("MaxNeutralMobsPerServer", 320, 1, 1024);
+      // @formatter:off
+      // @formatter:on
+      neutralMobsList =
           builder
               .comment(Constants.CONFIG_LIST_NEUTRAL_MOBS)
-              .define(
-                  "mekanismAdditionsNeutralMobsList",
-                  new ArrayList<String>(
-                      Arrays.asList(
-                          // @formatter:off
-                          // @formatter:on
-                          )));
+              .define("NeutralMobsList", new ArrayList<>(List.of()));
 
-      mekanismAdditionsMaxHostileMobsPerPlayer =
-          builder.defineInRange("mekanismAdditionsMaxHostileMobsPerPlayer", 4, 1, 64);
-      mekanismAdditionsMaxHostileMobsPerWorld =
-          builder.defineInRange("mekanismAdditionsMaxHostileMobsPerWorld", 16, 1, 512);
-      mekanismAdditionsHostileMobsList =
+      hostileMobsPerPlayer = builder.defineInRange("MaxHostileMobsPerPlayer", 4, 1, 64);
+      hostileMobsPerWorld = builder.defineInRange("MaxHostileMobsPerWorld", 16, 1, 512);
+      hostileMobsPerServer = builder.defineInRange("MaxHostileMobsPerServer", 320, 1, 1024);
+      hostileMobsList =
           builder
               .comment(Constants.CONFIG_LIST_HOSTILE_MOBS)
               .define(
-                  "mekanismAdditionsHostileMobsList",
-                  new ArrayList<String>(
+                  "HostileMobsList",
+                  new ArrayList<>(
                       Arrays.asList(
                           // @formatter:off
                           "mekanismadditions:baby_creeper",
