@@ -22,7 +22,6 @@ package de.markusbordihn.adaptiveperformancetweaksspawn.config.spawn;
 import de.markusbordihn.adaptiveperformancetweakscore.CoreConstants;
 import de.markusbordihn.adaptiveperformancetweaksspawn.Constants;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.fml.ModLoadingContext;
@@ -35,7 +34,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 @EventBusSubscriber(bus = EventBusSubscriber.Bus.MOD)
-public final class QuarkSpawnConfig {
+public final class UntitledDuckSpawnConfig {
 
   public static final ForgeConfigSpec commonSpec;
   public static final Config COMMON;
@@ -47,7 +46,8 @@ public final class QuarkSpawnConfig {
         new ForgeConfigSpec.Builder().configure(Config::new);
     commonSpec = specPair.getRight();
     COMMON = specPair.getLeft();
-    log.info("Registering {} {} spawn config ...", Constants.MOD_NAME, CoreConstants.QUARK_NAME);
+    log.info(
+        "Registering {} {} spawn config ...", Constants.MOD_NAME, CoreConstants.UNTITLED_DUCK_NAME);
     try {
       FileUtils.getOrCreateDirectory(
           FMLPaths.CONFIGDIR.get().resolve(CoreConstants.CONFIG_ID), CoreConstants.CONFIG_ID);
@@ -58,10 +58,10 @@ public final class QuarkSpawnConfig {
         .registerConfig(
             ModConfig.Type.COMMON,
             commonSpec,
-            CoreConstants.CONFIG_ID_PREFIX + "/spawn/QuarkSpawn.toml");
+            CoreConstants.CONFIG_ID_PREFIX + "/spawn/UntitledDuck.toml");
   }
 
-  private QuarkSpawnConfig() {}
+  private UntitledDuckSpawnConfig() {}
 
   public static class Config {
 
@@ -78,36 +78,31 @@ public final class QuarkSpawnConfig {
     public final ForgeConfigSpec.IntValue neutralMobsPerServer;
     public final ForgeConfigSpec.ConfigValue<List<String>> neutralMobsList;
 
-    public final ForgeConfigSpec.IntValue hostileMobsPerPlayer;
-    public final ForgeConfigSpec.IntValue hostileMobsPerWorld;
-    public final ForgeConfigSpec.IntValue hostileMobsPerServer;
-    public final ForgeConfigSpec.ConfigValue<List<String>> hostileMobsList;
-
     Config(ForgeConfigSpec.Builder builder) {
       builder.comment(Constants.MOD_NAME);
 
-      builder.push("Quark Spawn Config");
+      builder.push("Untitled Duck Spawn Config");
       enabled = builder.define("Enabled", true);
-      id = builder.define("Id", CoreConstants.QUARK_MOD);
+      id = builder.define("Id", CoreConstants.UNTITLED_DUCK_MOD);
 
-      passiveMobsPerPlayer = builder.defineInRange("MaxPassiveMobsPerPlayer", 4, 1, 64);
-      passiveMobsPerWorld = builder.defineInRange("MaxPassiveMobsPerWorld", 16, 1, 512);
-      passiveMobsPerServer = builder.defineInRange("MaxPassiveMobsPerServer", 320, 1, 1204);
+      passiveMobsPerPlayer = builder.defineInRange("MaxPassiveMobsPerPlayer", 16, 1, 64);
+      passiveMobsPerWorld = builder.defineInRange("MaxPassiveMobsPerWorld", 32, 1, 512);
+      passiveMobsPerServer = builder.defineInRange("MaxPassiveMobsPerServer", 320, 1, 1024);
       passiveMobsList =
           builder
               .comment(Constants.CONFIG_LIST_PASSIVE_MOBS)
               .define(
                   "PassiveMobsList",
                   new ArrayList<>(
-                      Arrays.asList(
+                      List.of(
                           // @formatter:off
-                          "quark:crab", "quark:frog", "quark:stoneling"
+                          "untitledduckmod:duck"
                           // @formatter:on
                           )));
 
-      neutralMobsPerPlayer = builder.defineInRange("MaxNeutralMobsPerPlayer", 4, 1, 64);
-      neutralMobsPerWorld = builder.defineInRange("MaxNeutralMobsPerWorld", 16, 1, 512);
-      neutralMobsPerServer = builder.defineInRange("MaxNeutralMobsPerServer", 320, 1, 1204);
+      neutralMobsPerPlayer = builder.defineInRange("MaxNeutralMobsPerPlayer", 8, 1, 64);
+      neutralMobsPerWorld = builder.defineInRange("MaxNeutralMobsPerWorld", 32, 1, 512);
+      neutralMobsPerServer = builder.defineInRange("MaxNeutralMobsPerServer", 320, 1, 1024);
       neutralMobsList =
           builder
               .comment(Constants.CONFIG_LIST_NEUTRAL_MOBS)
@@ -116,22 +111,7 @@ public final class QuarkSpawnConfig {
                   new ArrayList<>(
                       List.of(
                           // @formatter:off
-                          "quark:toretoise"
-                          // @formatter:on
-                          )));
-
-      hostileMobsPerPlayer = builder.defineInRange("MaxHostileMobsPerPlayer", 8, 1, 64);
-      hostileMobsPerWorld = builder.defineInRange("MaxHostileMobsPerWorld", 32, 1, 512);
-      hostileMobsPerServer = builder.defineInRange("MaxHostileMobsPerServer", 320, 1, 1204);
-      hostileMobsList =
-          builder
-              .comment(Constants.CONFIG_LIST_HOSTILE_MOBS)
-              .define(
-                  "HostileMobsList",
-                  new ArrayList<>(
-                      Arrays.asList(
-                          // @formatter:off
-                          "quark:forgotten", "quark:foxhound", "quark:wraith"
+                          "untitledduckmod:goose"
                           // @formatter:on
                           )));
 
